Keep trying to fix the gap issue

--- a/css/main.css
+++ b/css/main.css
@@ -26,8 +26,7 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 50%);
   grid-template-rows: repeat(2, 50%);
-  column-gap: 1rem;
-  row-gap: 1rem;
+  gap: 1rem;
   grid-template-areas:
     "pano  pano"
     "main  main";
